--- a/web-east-us.html
+++ b/web-east-us.html
@@ -6,7 +6,7 @@
   <body>
     <h1 style="font-size:30px">
       Hello from <span style="color:red;">East US!</span>!
-      <h2> This is not Ueast US2 - it is East US</h2>
+      <h2> This is not Ueast US2 - it is East US, change made in guthub</h2>
 	</h1>
   </body>
 </html>
